-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.9.0, Lustre 2.10.0
-
None
-
3
-
9223372036854775807
Since patch http://review.whamcloud.com/16930 "LU-7334 lprocfs: Refactored string to value helpers" was landed, it incorrectly checks that lod.*.stripecount and lod.*.stripeoffset are not negative, but in fact they can both be "-1" to indicate that the filesystem-wide default value should be used. These parameters are also set internally if using lfs setstripe -c -1 $MOUNT or lfs setstripe -i -1 $MOUNT to set the system wide default, generating a console error on the MDS:
LustreError: 12558:0:(obd_config.c:1392:class_process_proc_param()) lov.: error writing proc entry 'stripecount': rc = -34 LustreError: 12558:0:(obd_config.c:1392:class_process_proc_param()) lov.: error writing proc entry 'stripeoffset': rc = -34
- is related to
-
LU-7334 Refactor lprocfs helpers
-
- Resolved
-